--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.16.1
   contacts_service: ^0.3.10
   permission_handler: ^4.2.0+hotfix.3
+  flutter_launcher_icons: ^0.7.4
   flutter:
     sdk: flutter
 
@@ -35,7 +36,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "lib/assets/logo.png"
 # For information on the generic Dart part of this file, see the
@@ -52,7 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - lib/assets/minion.png
-  #  - lib/assets/logo.png
+   - lib/assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
